elemental/include/neutron/elemental/type.h

/**
 * SECTION: type
 * @title: Type
 * @short_description: Type definition and declaration
 */

/**
 * NtType:
 *
 * ID of a registered type
 */
typedef uint32_t NtType;
/**
 * NtTypeFlags:
 * @NT_TYPE_FLAG_STATIC: Defines a static type, this means it cannot be derived.
 * @NT_TYPE_FLAG_DYNAMIC: Defines a dynamic type, this means the it can be derived.
 * @NT_TYPE_FLAG_NOREF: Defines a type which cannot be referenced
 *
 * Enum of flags for registering types
 */
typedef enum _NtTypeFlags {
  NT_TYPE_FLAG_STATIC = (1 << 0),
  NT_TYPE_FLAG_DYNAMIC = (0 << 0),
  NT_TYPE_FLAG_NOREF = (1 << 1)
} NtTypeFlags;
struct _NtTypeInstance;
/**
 * NtTypeInfo:
 * @id: The ID of the type
 * @flags: Flags describing how the type can work
 * @extends: An array which ends with "NT_TYPE_NONE" to determine all parent types
 * @size: Size of the allocated data
 * @construct: Method to run when this type is allocated by %nt_type_instance_new
 * @destroy: Method to run when this type is deallocated by %nt_type_instance_unref
 *
 * Describes how a type should be defined
 */
typedef struct _NtTypeInfo {
  NtType id;
  NtTypeFlags flags;
  NtType* extends;
  size_t size;
  void (*construct)(struct _NtTypeInstance* instance, NtTypeArgument* arguments);
  void (*destroy)(struct _NtTypeInstance* instance);
  const char* sname;
} NtTypeInfo;
/**
 * NtTypeInstance:
 * @type: The type the instance was allocated for
 * @data_size: The total size of %NtTypeInstance
 * @ref_count: Number of references this instance has
 * @prev: The previous level instance this is tied to
 *
 * Instance of a type
 */
typedef struct _NtTypeInstance {
  NtType type;
  size_t data_size;
  size_t ref_count;
  struct _NtTypeInstance* prev;
} NtTypeInstance;
/**
 * nt_type_register:
 * @info: The %NtTypeInfo for the new type
 *
 * Register a new type
 *
 * Returns: The %NtType ID of the new type
 */
NtType nt_type_register(NtTypeInfo* info);
/**
 * nt_type_register:
 * @info: The %NtTypeInfo to unregister
 *
 * Unregisters a type
 */
void nt_type_unregister(NtTypeInfo* info);
/**
 * nt_type_isof:
 * @type: The type to check
 * @base: The base type to look for
 *
 * Checks whether or not @base is extended in @type.
 *
 * Returns: If %true then @type extends @base, otherwise %false is returned.
 */
bool nt_type_isof(NtType type, NtType base);
/**
 * nt_type_info_from_type:
 * @type: The %NtType ID
 *
 * Get type information from a type ID
 * Returns: The type information for @type.
 */
const NtTypeInfo* nt_type_info_from_type(NtType type);
/**
 * nt_type_info_get_total_size:
 * @info: The type info
 *
 * Returns: The total size of the type instance.
 */
const size_t nt_type_info_get_total_size(NtTypeInfo* info);
/**
 * nt_type_instance_new:
 * @type: The %NtType ID to create a new instance of
 * @arguments: The argument to pass
 *
 * Constructs a new type instance.
 *
 * Returns: The new instance of @type
 */
NtTypeInstance* nt_type_instance_new(NtType type, NtTypeArgument* arguments);
/**
 * nt_type_instance_get_data:
 * @instance: The type instance to get data for
 * @type: The type in @instance to look for
 *
 * Gets the instance of type inside of the parent instance
 *
 * Returns: A pointer to where @type's instance data begins at.
 */
NtTypeInstance* nt_type_instance_get_data(NtTypeInstance* instance, NtType type);
/**
 * nt_type_instance_ref:
 * @instance: The type instance to reference
 *
 * Increases the ref_count of the type instance
 */
NtTypeInstance* nt_type_instance_ref(NtTypeInstance* instance);
/**
 * nt_type_instance_unref:
 * @instance: The type instance to unreference
 *
 * Decreases the reference count of the type instance.
 * If the reference count is zero then the type instance is destroyed.
 */
void nt_type_instance_unref(NtTypeInstance* instance);