elemental/lib/bindings.dart

// ingore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_name

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings for Neutron's Elemental
///
class NeutronElemental {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NeutronElemental(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NeutronElemental.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// nt_type_argument_get:
  /// @arguments: A list of %NtTypeArgument
  /// @name: The name of the argument to get
  /// @default_value: The value to return if @arguments does not contain @name
  ///
  /// Gets the argument as defined by @name in @arguments.
  /// If @name is not in @arguments, then return @default_value.
  ///
  /// Returns: An %NtValue of either an %NtTypeArgument value or @default_value.
  NtValue nt_type_argument_get(
    ffi.Pointer<NtTypeArgument> arguments,
    ffi.Pointer<ffi.Char> name,
    NtValue default_value,
  ) {
    return _nt_type_argument_get(
      arguments,
      name,
      default_value,
    );
  }

  late final _nt_type_argument_getPtr = _lookup<
      ffi.NativeFunction<
          NtValue Function(ffi.Pointer<NtTypeArgument>, ffi.Pointer<ffi.Char>,
              NtValue)>>('nt_type_argument_get');
  late final _nt_type_argument_get = _nt_type_argument_getPtr.asFunction<
      NtValue Function(
          ffi.Pointer<NtTypeArgument>, ffi.Pointer<ffi.Char>, NtValue)>();

  /// nt_type_register:
  /// @info: The %NtTypeInfo for the new type
  ///
  /// Register a new type
  ///
  /// Returns: The %NtType ID of the new type
  int nt_type_register(
    ffi.Pointer<NtTypeInfo> info,
  ) {
    return _nt_type_register(
      info,
    );
  }

  late final _nt_type_registerPtr =
      _lookup<ffi.NativeFunction<NtType Function(ffi.Pointer<NtTypeInfo>)>>(
          'nt_type_register');
  late final _nt_type_register =
      _nt_type_registerPtr.asFunction<int Function(ffi.Pointer<NtTypeInfo>)>();

  /// nt_type_register:
  /// @info: The %NtTypeInfo to unregister
  ///
  /// Unregisters a type
  void nt_type_unregister(
    ffi.Pointer<NtTypeInfo> info,
  ) {
    return _nt_type_unregister(
      info,
    );
  }

  late final _nt_type_unregisterPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<NtTypeInfo>)>>(
          'nt_type_unregister');
  late final _nt_type_unregister = _nt_type_unregisterPtr
      .asFunction<void Function(ffi.Pointer<NtTypeInfo>)>();

  /// nt_type_isof:
  /// @type: The type to check
  /// @base: The base type to look for
  ///
  /// Checks whether or not @base is extended in @type.
  ///
  /// Returns: If %true then @type extends @base, otherwise %false is returned.
  bool nt_type_isof(
    int type,
    int base,
  ) {
    return _nt_type_isof(
      type,
      base,
    );
  }

  late final _nt_type_isofPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(NtType, NtType)>>(
          'nt_type_isof');
  late final _nt_type_isof =
      _nt_type_isofPtr.asFunction<bool Function(int, int)>();

  /// nt_type_info_from_type:
  /// @type: The %NtType ID
  ///
  /// Get type information from a type ID
  /// Returns: The type information for @type.
  ffi.Pointer<NtTypeInfo> nt_type_info_from_type(
    int type,
  ) {
    return _nt_type_info_from_type(
      type,
    );
  }

  late final _nt_type_info_from_typePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<NtTypeInfo> Function(NtType)>>(
          'nt_type_info_from_type');
  late final _nt_type_info_from_type = _nt_type_info_from_typePtr
      .asFunction<ffi.Pointer<NtTypeInfo> Function(int)>();

  /// nt_type_info_get_total_size:
  /// @info: The type info
  ///
  /// Returns: The total size of the type instance.
  int nt_type_info_get_total_size(
    ffi.Pointer<NtTypeInfo> info,
  ) {
    return _nt_type_info_get_total_size(
      info,
    );
  }

  late final _nt_type_info_get_total_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<NtTypeInfo>)>>(
          'nt_type_info_get_total_size');
  late final _nt_type_info_get_total_size = _nt_type_info_get_total_sizePtr
      .asFunction<int Function(ffi.Pointer<NtTypeInfo>)>();

  /// nt_type_instance_new:
  /// @type: The %NtType ID to create a new instance of
  /// @arguments: The argument to pass
  ///
  /// Constructs a new type instance.
  ///
  /// Returns: The new instance of @type
  ffi.Pointer<NtTypeInstance> nt_type_instance_new(
    int type,
    ffi.Pointer<NtTypeArgument> arguments,
  ) {
    return _nt_type_instance_new(
      type,
      arguments,
    );
  }

  late final _nt_type_instance_newPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtTypeInstance> Function(
              NtType, ffi.Pointer<NtTypeArgument>)>>('nt_type_instance_new');
  late final _nt_type_instance_new = _nt_type_instance_newPtr.asFunction<
      ffi.Pointer<NtTypeInstance> Function(int, ffi.Pointer<NtTypeArgument>)>();

  /// nt_type_instance_get_data:
  /// @instance: The type instance to get data for
  /// @type: The type in @instance to look for
  ///
  /// Gets the instance of type inside of the parent instance
  ///
  /// Returns: A pointer to where @type's instance data begins at.
  ffi.Pointer<NtTypeInstance> nt_type_instance_get_data(
    ffi.Pointer<NtTypeInstance> instance,
    int type,
  ) {
    return _nt_type_instance_get_data(
      instance,
      type,
    );
  }

  late final _nt_type_instance_get_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtTypeInstance> Function(ffi.Pointer<NtTypeInstance>,
              NtType)>>('nt_type_instance_get_data');
  late final _nt_type_instance_get_data =
      _nt_type_instance_get_dataPtr.asFunction<
          ffi.Pointer<NtTypeInstance> Function(
              ffi.Pointer<NtTypeInstance>, int)>();

  /// nt_type_instance_ref:
  /// @instance: The type instance to reference
  ///
  /// Increases the ref_count of the type instance
  ffi.Pointer<NtTypeInstance> nt_type_instance_ref(
    ffi.Pointer<NtTypeInstance> instance,
  ) {
    return _nt_type_instance_ref(
      instance,
    );
  }

  late final _nt_type_instance_refPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtTypeInstance> Function(
              ffi.Pointer<NtTypeInstance>)>>('nt_type_instance_ref');
  late final _nt_type_instance_ref = _nt_type_instance_refPtr.asFunction<
      ffi.Pointer<NtTypeInstance> Function(ffi.Pointer<NtTypeInstance>)>();

  /// nt_type_instance_unref:
  /// @instance: The type instance to unreference
  ///
  /// Decreases the reference count of the type instance.
  /// If the reference count is zero then the type instance is destroyed.
  void nt_type_instance_unref(
    ffi.Pointer<NtTypeInstance> instance,
  ) {
    return _nt_type_instance_unref(
      instance,
    );
  }

  late final _nt_type_instance_unrefPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<NtTypeInstance>)>>(
      'nt_type_instance_unref');
  late final _nt_type_instance_unref = _nt_type_instance_unrefPtr
      .asFunction<void Function(ffi.Pointer<NtTypeInstance>)>();

  late final ffi.Pointer<ffi.Size> _NT_BACKTRACE_SIZE =
      _lookup<ffi.Size>('NT_BACKTRACE_SIZE');

  int get NT_BACKTRACE_SIZE => _NT_BACKTRACE_SIZE.value;

  set NT_BACKTRACE_SIZE(int value) => _NT_BACKTRACE_SIZE.value = value;

  ffi.Pointer<NtBacktrace> NT_BACKTRACE(
    ffi.Pointer<NtTypeInstance> instance,
  ) {
    return _NT_BACKTRACE(
      instance,
    );
  }

  late final _NT_BACKTRACEPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtBacktrace> Function(
              ffi.Pointer<NtTypeInstance>)>>('NT_BACKTRACE');
  late final _NT_BACKTRACE = _NT_BACKTRACEPtr.asFunction<
      ffi.Pointer<NtBacktrace> Function(ffi.Pointer<NtTypeInstance>)>();

  bool NT_IS_BACKTRACE(
    ffi.Pointer<NtBacktrace> self,
  ) {
    return _NT_IS_BACKTRACE(
      self,
    );
  }

  late final _NT_IS_BACKTRACEPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<NtBacktrace>)>>(
          'NT_IS_BACKTRACE');
  late final _NT_IS_BACKTRACE =
      _NT_IS_BACKTRACEPtr.asFunction<bool Function(ffi.Pointer<NtBacktrace>)>();

  int nt_backtrace_get_type() {
    return _nt_backtrace_get_type();
  }

  late final _nt_backtrace_get_typePtr =
      _lookup<ffi.NativeFunction<NtType Function()>>('nt_backtrace_get_type');
  late final _nt_backtrace_get_type =
      _nt_backtrace_get_typePtr.asFunction<int Function()>();

  /// nt_backtrace_new:
  ///
  /// Creates a new backtrace
  /// Returns: An empty backtrace
  ffi.Pointer<NtBacktrace> nt_backtrace_new() {
    return _nt_backtrace_new();
  }

  late final _nt_backtrace_newPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<NtBacktrace> Function()>>(
          'nt_backtrace_new');
  late final _nt_backtrace_new =
      _nt_backtrace_newPtr.asFunction<ffi.Pointer<NtBacktrace> Function()>();

  /// nt_backtrace_new_auto:
  ///
  /// Generates a backtrace automatically
  /// Returns: A new backtrace containing all of the entries
  ffi.Pointer<NtBacktrace> nt_backtrace_new_auto() {
    return _nt_backtrace_new_auto();
  }

  late final _nt_backtrace_new_autoPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<NtBacktrace> Function()>>(
          'nt_backtrace_new_auto');
  late final _nt_backtrace_new_auto = _nt_backtrace_new_autoPtr
      .asFunction<ffi.Pointer<NtBacktrace> Function()>();

  /// nt_backtrace_push_full:
  /// @self: An instance of a backtrace
  /// @file: The source file
  /// @method: The method name
  /// @line: The line in the source file
  /// @address: The address of the method
  ///
  /// Pushes a new method call onto the trace, it is recommended to use %nt_backtrace_push
  void nt_backtrace_push_full(
    ffi.Pointer<NtBacktrace> self,
    ffi.Pointer<ffi.Char> file,
    ffi.Pointer<ffi.Char> method,
    int line,
    ffi.Pointer<ffi.Void> address,
  ) {
    return _nt_backtrace_push_full(
      self,
      file,
      method,
      line,
      address,
    );
  }

  late final _nt_backtrace_push_fullPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<NtBacktrace>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Void>)>>('nt_backtrace_push_full');
  late final _nt_backtrace_push_full = _nt_backtrace_push_fullPtr.asFunction<
      void Function(ffi.Pointer<NtBacktrace>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Void>)>();

  /// nt_backtrace_pop:
  /// @self: An instance of a backtrace
  ///
  /// Pops the last backtrace entry off
  void nt_backtrace_pop(
    ffi.Pointer<NtBacktrace> self,
  ) {
    return _nt_backtrace_pop(
      self,
    );
  }

  late final _nt_backtrace_popPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<NtBacktrace>)>>(
          'nt_backtrace_pop');
  late final _nt_backtrace_pop = _nt_backtrace_popPtr
      .asFunction<void Function(ffi.Pointer<NtBacktrace>)>();

  late final ffi.Pointer<ffi.Size> _NT_ERROR_SIZE =
      _lookup<ffi.Size>('NT_ERROR_SIZE');

  int get NT_ERROR_SIZE => _NT_ERROR_SIZE.value;

  set NT_ERROR_SIZE(int value) => _NT_ERROR_SIZE.value = value;

  ffi.Pointer<NtError> NT_ERROR(
    ffi.Pointer<NtTypeInstance> instance,
  ) {
    return _NT_ERROR(
      instance,
    );
  }

  late final _NT_ERRORPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<NtError> Function(
              ffi.Pointer<NtTypeInstance>)>>('NT_ERROR');
  late final _NT_ERROR = _NT_ERRORPtr.asFunction<
      ffi.Pointer<NtError> Function(ffi.Pointer<NtTypeInstance>)>();
